--- a/css/style.css
+++ b/css/style.css
@@ -90,21 +90,22 @@ body.bodyoverflos{
     left: 0;
     top: 0;
     width: 100%;
-    background: rgba(0, 0, 0, .97);
+    background: rgba(22, 22, 22, .97);
     transition: all ease 400ms;
     -moz-transition: all ease 400ms;
     -webkit-transition: all ease 400ms;
     -ms-transition: all ease 400ms;
     -o-transition: all ease 400ms;
+    opacity: 0.8;
 }
 body.menuOpened .fixedHeader{
     left: -300px;
 }
 .logo{
-    width: 100%;
+    width: 58%;
     text-align: left;
-    padding-top: 45px;
-    padding-bottom: 0px;
+    padding-top: 5px;
+    padding-bottom: 0;
     transition: all ease 500ms;
     -moz-transition: all ease 500ms;
     -webkit-transition: all ease 500ms;
@@ -112,8 +113,8 @@ body.menuOpened .fixedHeader{
     -o-transition: all ease 500ms;
 }
 .fixedHeader .logo{
-    padding-top: 37px;
-    padding-bottom: 32px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 .logo a{
     font-family: Roboto;
@@ -772,7 +773,7 @@ body.menuOpened .sideMenuArea{
     font-size: 14px;
     letter-spacing: 7px;
     text-transform: uppercase;
-    line-height: .8;
+    line-height: 1.5;
     margin: 27px 0 28px;
 }
 .iconBox p{
@@ -782,6 +783,7 @@ body.menuOpened .sideMenuArea{
     color: #757575;
     margin-bottom: 0px;
 }
+
 
 /*=======================================================================
 // Features 2
@@ -814,6 +816,14 @@ body.menuOpened .sideMenuArea{
     letter-spacing: 3px;
     margin: 16px 0 28px;
 }
+
+.iconBox2 .flaticon:before,
+.icon2 .flatIcon:after{
+    font-size: 50px;
+    line-height: 50px;
+}
+
+
 
 /*=======================================================================
 // Features3
@@ -939,13 +949,22 @@ body.menuOpened .sideMenuArea{
 .counters2 h2{
     font-family: Georgia;
     color: #fd892a;
-    font-size: 56px;
+    font-size: 46px;
     margin: 4px 0 23px;
+    line-height: 50px;
 }
 .counters2 h4{
     font-weight: 700;
     letter-spacing: 2px;
+    margin-bottom: 30px;
 }
+
+.counters2 .package-list {
+    list-style-type: none;
+    margin-left: -50px;
+}
+
+
 /*=======================================================================
 // Funfact 3
 =========================================================================*/
@@ -999,7 +1018,7 @@ body.menuOpened .sideMenuArea{
 .itemContent h2{
     font-size: 34px;
     color: #fff;
-    line-height: .8;
+    line-height: 1.5;
     margin: 13px 0 30px;
     font-family: Georgia;
 }
@@ -1012,32 +1031,32 @@ body.menuOpened .sideMenuArea{
 .bootsTab{
     margin-top: 75px;
 }
-.stellarTab{
+.vanntechsTab{
     padding: 0;
     margin: 0;
     width: 100%;
     text-align: center;
     line-height: .8;
 }
-.stellarTab li{
+.vanntechsTab li{
     display: inline-block;
     list-style: none;
     line-height: .8;
     width: 33%;
     text-align: center;
 }
-.stellarTab li a{
+.vanntechsTab li a{
     font-size: 14px;
     text-transform: uppercase;
     color: #999;
     letter-spacing: .2px;
     font-weight: 700;
-    line-height: .8;
+    line-height: 1.5;
     position: relative;
     padding-bottom: 20px;
     display: inline-block;
 }
-.stellarTab li a:after{
+.vanntechsTab li a:after{
     width: 0px;
     height: 2px;
     background: #fd892a;
@@ -1053,10 +1072,10 @@ body.menuOpened .sideMenuArea{
     -ms-transition: all ease 500ms;
     -o-transition: all ease 500ms;
 }
-.stellarTab li a:hover, .stellarTab li.active a{
+.vanntechsTab li a:hover, .vanntechsTab li.active a{
     color: #FFF;
 }
-.stellarTab li a:hover:after, .stellarTab li.active a:after{
+.vanntechsTab li a:hover:after, .vanntechsTab li.active a:after{
     width: 40px;
 }
 .itemContent{
@@ -1081,16 +1100,16 @@ body.menuOpened .sideMenuArea{
     font-weight: 300;
     text-transform: uppercase;
     font-size: 24px;
-    line-height: .8;
+    line-height: 1.5;
     letter-spacing: 6px;
     margin: 23px 0 30px;
 }
-.bootsTab2 .stellarTab li a{
+.bootsTab2 .vanntechsTab li a{
     font-weight: 500;
     letter-spacing: 2px;
     color: #717171;
 }
-.bootsTab2 .stellarTab li a:hover, .bootsTab2 .stellarTab li.active a{
+.bootsTab2 .vanntechsTab li a:hover, .bootsTab2 .vanntechsTab li.active a{
     color: #fff;
 }
 .bootsTab2 .itemContent{
@@ -1320,6 +1339,16 @@ body.menuOpened .sideMenuArea{
     width: 100%;
     height: auto;
 }
+
+.folioItem2 h5 {
+    color: #fd892a;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-style: italic;
+    font-weight: 700;
+    letter-spacing: 2px;
+    display: inline-block;
+}
 .fI2Hover{
     width: 100%;
     height: 100%;
@@ -1533,7 +1562,7 @@ body.menuOpened .sideMenuArea{
     line-height: .8;
     letter-spacing: 8px;
     margin-bottom: 30px;
-    color: #b89841;
+    color: #fd892a;
     margin: 0px 0 15px;
     text-transform: uppercase;
     font-weight: 300;
@@ -1552,14 +1581,14 @@ body.menuOpened .sideMenuArea{
     margin: 0 0 52px;
     font-family: Georgia;
 }
-.callToActionContent2 .stellarButton{
-    background: #b89841;
+.callToActionContent2 .vanntechsButton{
+    background: #fd892a;
     color: #FFF;
     font-weight: 700;
 }
-.callToActionContent2 .stellarButton:hover{
+.callToActionContent2 .vanntechsButton:hover{
     background: #FFF;
-    color: #b89841;
+    color: #fd892a;
 }
 
 /*=======================================================================
@@ -1612,7 +1641,7 @@ body.menuOpened .sideMenuArea{
     margin: 0 0 61px;
     letter-spacing: 12px;
 }
-.stellarButton{
+.vanntechsButton{
     width: 230px;
     height: 50px;
     background: #ffd667;
@@ -1632,7 +1661,7 @@ body.menuOpened .sideMenuArea{
     -ms-transition: all ease 400ms;
     -o-transition: all ease 400ms;
 }
-.stellarButton:hover{
+.vanntechsButton:hover{
     background: #2c3da7;
     color: #FFF;
 }
@@ -1667,12 +1696,12 @@ body.menuOpened .sideMenuArea{
     letter-spacing: 12px;
     font-weight: 100;
 }
-.callToActionContent3 .stellarButton{
+.callToActionContent3 .vanntechsButton{
     background: #b89840;
     color: #FFF;
     letter-spacing: 3px;
 }
-.callToActionContent3 .stellarButton:hover{
+.callToActionContent3 .vanntechsButton:hover{
     background: #FFF;
     color: #000;
 }
@@ -1725,7 +1754,7 @@ body.menuOpened .sideMenuArea{
 .teamDetails{
     width: 222px;
     height: 101px;
-    background: #2c3da7;
+    background: #b89841;
     position: absolute;
     left: 0;
     right: 0;
@@ -1877,7 +1906,7 @@ body.menuOpened .sideMenuArea{
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(184, 152, 65, .7);
+    background: rgba(73, 73, 73, 0.52);
     opacity: 0;
     visibility: hidden;
     transition: all ease 400ms;
@@ -1896,7 +1925,7 @@ body.menuOpened .sideMenuArea{
     bottom: -13px;
 }
 .singleTeam2 .teamDetails a:hover{
-    color: #b89841;
+    color: #4f4f4f;
 }
 /*=======================================================================
 // Team 3
@@ -1910,7 +1939,7 @@ body.menuOpened .sideMenuArea{
     margin-bottom: 123px
 }
 .teamsection .sectionTitle small{
-    color: #b89840;
+    color: #fd892a;
 }
 .singleTeam2{
     width: 270px;
@@ -1932,7 +1961,7 @@ body.menuOpened .sideMenuArea{
     padding: 36px 0 128px;
 }
 .infoSection .biggerHeading span{
-    color: #b89841;
+    color: #fd892a;
 }
 .infoP{
     margin: 0px;
@@ -2187,8 +2216,8 @@ body.menuOpened .sideMenuArea{
 }
 .testiItem2 p{
     font-family: Georgia;
-    color: #336fac;
-    font-size: 36px;
+    color: #b89841;
+    font-size: 20px;
     line-height: 50px;
     letter-spacing: 0px;
     font-style: italic;
@@ -3230,11 +3259,11 @@ button.submita:hover{
     color: #FFF;
 }
 .listHeader h1 a:hover, .blBG .listHeader h1 a:hover{
-    color: #b89840;
+    color: #fd892a;
 }
 .bloglist .sbCats{
     font-size: 13px;
-    color: #b89841;
+    color: #fd892a;
     line-height: .8;
     text-transform: uppercase;
     font-weight: 700;
@@ -3242,7 +3271,7 @@ button.submita:hover{
 }
 .bloglist .sbCats a{
     font-size: 13px;
-    color: #b89841;
+    color: #fd892a;
     line-height: .8;
     text-transform: uppercase;
     letter-spacing: 0;
@@ -3268,7 +3297,7 @@ button.submita:hover{
     color: rgba(0, 0, 0, .5);
 }
 .bloglist .sbFooter a:hover{
-    color: #b89840;
+    color: #fd892a;
 }
 .quotList.bloglist .sbFooter a:hover{
     color: #fff;
@@ -3312,7 +3341,7 @@ button.submita:hover{
     color: #FFF;
 }
 .videoContent h1 a:hover{
-    color: #b89840;
+    color: #fd892a;
 }
 .videoContent .sbCats{
     padding-top: 17px;
@@ -3341,7 +3370,7 @@ button.submita:hover{
     margin:  0 0 30px;
     font-size: 14px;
     text-transform: uppercase;
-    color: #b89840;
+    color: #fd892a;
     font-weight: 300;
     letter-spacing: 3px;
 }
@@ -3382,7 +3411,7 @@ button.submita:hover{
     width: 45px;
 }
 .socialIcons a:hover{
-    background: #b89840;
+    background: #fd892a;
 }
 .instaFeed{
     width: 100%;
@@ -3435,7 +3464,7 @@ button.submita:hover{
     margin-top: 3px;
 }
 .singleRecent a:hover{
-    color: #b89840;
+    color: #fd892a;
 }
 .tabclouds{
     width: 100%;
@@ -3652,12 +3681,12 @@ button.submita:hover{
     font-size: 13px;
     line-height: .8;
     letter-spacing: 0;
-    color: #b89841;
+    color: #fd892a;
     font-weight: 700;
 }
 .singleHeader .cats a{
     text-transform: uppercase;
-    color: #b89841;
+    color: #fd892a;
     letter-spacing: 0;
     display: inline-block;
     line-height: .8;
@@ -3696,7 +3725,7 @@ button.submita:hover{
     font-weight: 400;
 }
 .authInfo a:hover{
-    color: #b89840;
+    color: #fd892a;
 }
 .singleInfos{
     width: 100%;
@@ -3717,7 +3746,7 @@ button.submita:hover{
     margin-right: 23px;
 }
 .singleInfos a:hover{
-    color: #b89840;
+    color: #fd892a;
 }
 .singleInfos a i{
     bottom: -2px;
@@ -3895,15 +3924,15 @@ button.submita:hover{
     font-weight: 300;
 }
 .relatedBlog .sbHeader h1 a:hover{
-    color: #b89841;
+    color: #fd892a;
 }
 .relatedBlog .sbCats{
-    color: #b89841;
+    color: #fd892a;
     font-size: 13px;
     font-weight: 700;
 }
 .relatedBlog .sbCats a{
-    color: #b89841;
+    color: #fd892a;
     font-size: 13px;
     font-weight: 700;
     letter-spacing: 0;
@@ -3915,7 +3944,7 @@ button.submita:hover{
     font-weight: 400;
 }
 .relatedBlog .sbFooter a:hover{
-    color: #b89841;
+    color: #fd892a;
 }
 .owlItem{
     width: 100%;
@@ -4023,7 +4052,7 @@ button.submita:hover{
     display: block;
     line-height: .8;
     letter-spacing: 0;
-    color: #b89841;
+    color: #fd892a;
     text-transform: capitalize;
     margin-bottom: 10px;
 }
@@ -4038,7 +4067,7 @@ button.submita:hover{
 }
 .comDetailsa h3 a{
     font-size: 13px;
-    color: #b89841;
+    color: #fd892a;
     letter-spacing: 2px;
     text-transform: uppercase;
     margin: 0 0 0 17px;
@@ -4067,7 +4096,7 @@ button.submita:hover{
     color: #000;
 }
 .comDetailsa h3 a:hover:before{
-    background: #b89841;
+    background: #fd892a;
 }
 .comContenta{
     font-size: 16px;
@@ -4148,7 +4177,7 @@ button.submita:hover{
     text-transform: uppercase;
     letter-spacing: 2px;
     border: none;
-    background: #b89841;
+    background: #fd892a;
     border-radius: 5px;
     transition: all ease 500ms;
     -moz-transition: all ease 500ms;
@@ -4187,7 +4216,7 @@ button.submita:hover{
     visibility: visible;
 }
 #backToTop:hover{
-    background: #2c3da7;
+    background: #fd892a;
 }
 
 
@@ -4253,7 +4282,7 @@ button.submita:hover{
     line-height: .7;
     text-transform: uppercase;
     letter-spacing: 2.8px;
-    color: #b89841;
+    color: #fd892a;
     font-weight: 700;
     margin: 0 0 25px;
 }
@@ -4273,7 +4302,7 @@ button.submita:hover{
     display: block;
     line-height: .7;
 }
-.folioInformations .stellarButton{
+.folioInformations .vanntechsButton{
     margin-top: 20px;
 }
 .borderFI{
@@ -4328,7 +4357,7 @@ button.submita:hover{
     text-transform: uppercase;
 }
 .clName a{
-    color: #b89841;
+    color: #fd892a;
 }
 .clName a:hover{
     color: #000;
