--- a/css/preset.css
+++ b/css/preset.css
@@ -169,7 +169,7 @@ p{
     font-size: 46px;
     margin: 0 0 58px;
     font-family: Georgia;
-    line-height: .8;
+    line-height: 1.5;
 }
 .sectionTitle2 small{
     font-size: 16px;
