--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ body.bodyoverflos{
 /*=======================================================================
 // Headers
 =========================================================================*/
+
+.visibility-hidden {
+    visibility: hidden;
+}
 .header{
     width: 100%;
     position: absolute;
@@ -232,6 +236,7 @@ body.menuOpened .fixedHeader{
     -ms-transition: top 0.3s ease 0.6s, opacity 0.3s ease 0.6s;
     -o-transition: top 0.3s ease 0.6s, opacity 0.3s ease 0.6s;
 }
+
 .mainMenu ul.inactive li{
     top: -5px;
     opacity: 0;
@@ -2832,7 +2837,6 @@ body.menuOpened .sideMenuArea{
 
 .contactSection{
     width: 100%;
-    position: relative;
     min-height: 600px;
     background: #fafafa url(../images/bg/concat.webp) no-repeat scroll center 154px;
     padding-top: 250px;
@@ -2843,7 +2847,6 @@ body.menuOpened .sideMenuArea{
     height: 440px;
     top: -430px;
     background: #fafafa;
-    position: absolute;
     right: 0px;
     content: "";
     z-index: 1;
